force-app/main/default/objects/Campaign_Automation_Management__c/Campaign_Automation_Management__c.object-meta.xml
<CustomObject>
    <label>Campaign Automation Management</label>
    <nameField>
        <label>Campaign Automation Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Automation Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>