force-app/main/default/objects/Campaign_Automation_Management__c/fields/AHL_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>AHL_Group_ID__c</fullName>
    <description>Created as part of SCDEV-5529</description>
    <inlineHelpText>Group ID for At Home Labs internal programs</inlineHelpText>
    <label>AHL Group ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>