force-app/main/default/objects/Campaign_Automation_Management__c/fields/Allow_Recurring_Order__c.field-meta.xml
<CustomField>
    <fullName>Allow_Recurring_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Recurring Order</label>
    <type>Checkbox</type>
</CustomField>