force-app/main/default/objects/Campaign_Automation_Management__c/fields/Allows_members_to_opt_out__c.field-meta.xml
<CustomField>
    <fullName>Allows_members_to_opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Member is opted in by default.</inlineHelpText>
    <label>Allows members to opt out?</label>
    <type>Checkbox</type>
</CustomField>