force-app/main/default/objects/Campaign_Automation_Management__c/fields/Answer1_Action__c.field-meta.xml
<CustomField>
    <fullName>Answer1_Action__c</fullName>
    <label>Answer1 Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Action</fullName>
            </value>
            <value>
                <fullName>Send Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>