force-app/main/default/objects/Campaign_Automation_Management__c/fields/Answer1_Confirmation_Message__c.field-meta.xml
<CustomField>
    <fullName>Answer1_Confirmation_Message__c</fullName>
    <label>Answer1 Confirmation Message</label>
    <length>160</length>
    <type>Text</type>
</CustomField>