force-app/main/default/objects/Campaign_Automation_Management__c/fields/Answer1_Text__c.field-meta.xml
<CustomField>
    <fullName>Answer1_Text__c</fullName>
    <label>Answer1 Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>