force-app/main/default/objects/Campaign_Automation_Management__c/fields/Answer2_Confirmation_Message__c.field-meta.xml
<CustomField>
    <fullName>Answer2_Confirmation_Message__c</fullName>
    <label>Answer2 Confirmation Message</label>
    <length>160</length>
    <type>Text</type>
</CustomField>