force-app/main/default/objects/Campaign_Automation_Management__c/fields/Answer2_Response__c.field-meta.xml
<CustomField>
    <fullName>Answer2_Response__c</fullName>
    <label>Answer2 Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>