force-app/main/default/objects/Campaign_Automation_Management__c/fields/Campaign_Audience_Category__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Audience_Category__c</fullName>
    <description>&quot;None: Does not segment the eligible population based on enrollment status nor any other qualification. All members from this sponsor (health plan, employer) can generate opt-ins. 
Active-30: have logged ingto web or mobile app, and/or used BG meter in last 30 days
Inactive: have not logged in to mobile or web, nor used BG meter in 30 days+
&quot;
Data Owner: Program Management Team</description>
    <label>Campaign Audience Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active-30</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Active Group 1</fullName>
            </value>
            <value>
                <fullName>Active Group 2</fullName>
            </value>
            <value>
                <fullName>Active Group 3</fullName>
            </value>
            <value>
                <fullName>Active Group 4</fullName>
            </value>
            <value>
                <fullName>Custom Census File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>