force-app/main/default/objects/Campaign_Automation_Management__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <label>Campaign Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>