force-app/main/default/objects/Campaign_Automation_Management__c/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meter Message</fullName>
                <default>true</default>
                <label>Meter Message</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>