force-app/main/default/objects/Campaign_Automation_Management__c/fields/Client_Member_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Member_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Member Code</label>
    <referenceTo>ClientMemberCode__c</referenceTo>
    <relationshipLabel>Campaign Automation Management</relationshipLabel>
    <relationshipName>Campaign_Automation_Management</relationshipName>
    <type>Lookup</type>
</CustomField>