force-app/main/default/objects/Campaign_Automation_Management__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <formula>Client_Member_Code__r.ClientMemberCode__c</formula>
    <label>Code</label>
    <type>Text</type>
</CustomField>