force-app/main/default/objects/Campaign_Automation_Management__c/fields/Custom_Content_Message_Text__c.field-meta.xml
<CustomField>
    <fullName>Custom_Content_Message_Text__c</fullName>
    <label>Custom Content Message Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>