force-app/main/default/objects/Campaign_Automation_Management__c/fields/Enable_Second_Round_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Enable_Second_Round_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Second Round Campaign</label>
    <type>Checkbox</type>
</CustomField>