force-app/main/default/objects/Campaign_Automation_Management__c/fields/Initial_Message__c.field-meta.xml
<CustomField>
    <fullName>Initial_Message__c</fullName>
    <label>Initial Message</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diabetes Medications</fullName>
            </value>
            <value>
                <fullName>Diabetes Meds - Adherence talk to a coach</fullName>
            </value>
            <value>
                <fullName>Diabetes care - Kidney disease monitoring</fullName>
            </value>
            <value>
                <fullName>Managing blood pressure</fullName>
            </value>
            <value>
                <fullName>BG-A1c Reminder</fullName>
            </value>
            <value>
                <fullName>BG-Smoking Cessation</fullName>
            </value>
            <value>
                <fullName>BG-Exercise</fullName>
            </value>
            <value>
                <fullName>BG-Eye Exam</fullName>
            </value>
            <value>
                <fullName>BG-Mail Order Meds</fullName>
            </value>
            <value>
                <fullName>BG-Preventative Visit</fullName>
            </value>
            <value>
                <fullName>BG-Flu Shot</fullName>
            </value>
            <value>
                <fullName>BG-Telehealth</fullName>
            </value>
            <value>
                <fullName>Email - A1c Reminder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>