force-app/main/default/objects/Campaign_Automation_Management__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <description>&quot;Definition: Specifies the initial/primary type of channel that will be used to communicate the campaign to the member and if applicable collect their opt-in.

Options Below: 
Meter Message: the selected audience will recieve an invite to opt-in from their BG meter during the eligible period
No Notifciation: Definition: A campaign with &quot;&quot;No Notification&quot;&quot; selected will not send an opt-in invitation to members via the BG meter.&quot;

Data Owner: Program Management Team</description>
    <label>Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Meter Message</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>