force-app/main/default/objects/Campaign_Automation_Management__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>Data Owner: Program Management Team
added new feild dependencies</description>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Campaign_Audience_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Diabetes</fullName>
                <default>true</default>
                <label>Diabetes</label>
            </value>
            <value>
                <fullName>Hypertension</fullName>
            </value>
            <value>
                <fullName>Prediabetes</fullName>
            </value>
            <value>
                <fullName>Weight Management</fullName>
            </value>
            <value>
                <fullName>Chronic Kidney Disease</fullName>
            </value>
            <value>
                <fullName>Heart Failure</fullName>
            </value>
            <value>
                <fullName>Diabetes Deviceflex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>