force-app/main/default/objects/Campaign_Automation_Management__c/fields/Recurring_Order_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Order_Frequency__c</fullName>
    <inlineHelpText>Defines the frequency of how often a member can request a kit</inlineHelpText>
    <label>Recurring Order Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Once every 6 months</fullName>
            </value>
            <value>
                <fullName>Once every 12 months</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>