force-app/main/default/objects/Campaign_Automation_Management__c/fields/Second_Round_Campaign_Days_Delay__c.field-meta.xml
<CustomField>
    <fullName>Second_Round_Campaign_Days_Delay__c</fullName>
    <label>Second Round Campaign Days Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>