force-app/main/default/objects/Campaign_Automation_Management__c/fields/Second_Round_Campaign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Round_Campaign_Start_Date__c</fullName>
    <label>Second Round Campaign Start Date</label>
    <type>Date</type>
</CustomField>