force-app/main/default/objects/Campaign_Automation_Management__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Non-New York</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>