force-app/main/default/objects/Campaign_Automation_Management__c/fields/Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Type__c</fullName>
    <label>Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1C</fullName>
                <default>true</default>
                <label>A1C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>