force-app/main/default/objects/Campaign_Automation_Management__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <description>&quot;None: cannot select none
LetsGetChecked: choosing LGC as the vendor 
&quot;
Data Owner: Program Management Team</description>
    <label>Vendor Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LetsGetChecked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>