force-app/main/default/objects/Campaign_Automation_Management__c/fields/Vendor_Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program_Code__c</fullName>
    <description>&quot;Program Code is an indentifier that specifies the specific program design to be used by the vendor for a particular order. Key parameters that are set by the program code are: kit type, welcome letter, whether the vendor provides reminders, amoung others.
Because our current vendor requires different collection technologies to be used in different geographies (NY/non-NY) the programCode also specifies geo. As such for a single campaign needs to have multiple Program codes associated with it.&quot;</description>
    <label>Vendor Program Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>