force-app/main/default/objects/Campaign_Automation_Management__c/validationRules/Answer1_Response_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Answer1_Response_Is_Required</fullName>
    <active>true</active>
    <description>Answer1 Response is required if the Answer1 Action is Email</description>
    <errorConditionFormula>AND(ISPICKVAL(Answer1_Action__c, &apos;Send Email&apos;),
				ISBLANK(Answer1_Response__c))</errorConditionFormula>
    <errorMessage>Answer1 Response is required if the Answer1 Action is &quot;Send Email&quot;.</errorMessage>
</ValidationRule>