force-app/main/default/objects/Campaign_Automation_Management__c/validationRules/End_Date_cannot_be_less_the_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_cannot_be_less_the_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt;= Start_Date__c</errorConditionFormula>
    <errorMessage>End Date should be greater than the Start Date.</errorMessage>
</ValidationRule>