force-app/main/default/objects/Campaign_Automation_Management__c/validationRules/File_Name_field_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>File_Name_field_is_required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Campaign_Audience_Category__c, &apos;Custom Census File&apos;) , ISBLANK(File_Name__c))</errorConditionFormula>
    <errorDisplayField>File_Name__c</errorDisplayField>
    <errorMessage>File Name field is required</errorMessage>
</ValidationRule>