force-app/main/default/objects/Campaign_Automation_Management__c/validationRules/Second_round_meter_message_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Second_round_meter_message_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (Enable_Second_Round_Campaign__c, OR (ISNULL(Second_Round_Campaign_Days_Delay__c), ISNULL(Second_Round_Campaign_Start_Date__c)))</errorConditionFormula>
    <errorMessage>&quot;Second round meter message days&quot;  and  &quot;Second Round Campaign Start Date&quot; field is required</errorMessage>
</ValidationRule>