force-app/main/default/objects/Campaign_Automation_Management__c/validationRules/Start_Date_cannot_be_in_the_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_cannot_be_in_the_past</fullName>
    <active>false</active>
    <description>Start Date cannot be in the past.</description>
    <errorConditionFormula>AND(OR(ISNEW(),
ISCHANGED(Start_Date__c)),
NOT(ISBLANK(Start_Date__c)),
Start_Date__c &lt; TODAY())</errorConditionFormula>
    <errorMessage>Start Date cannot be in the past, please select a valid date.</errorMessage>
</ValidationRule>