force-app/main/default/objects/Campaign_Automation_Management__c/validationRules/Validation_for_Recurring_Frequency.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Recurring_Frequency</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
     OR(
        AND(
            Allow_Recurring_Order__c = TRUE,
            ISBLANK(TEXT(Recurring_Order_Frequency__c))
        ),
        AND(
            NOT(ISBLANK(TEXT(Recurring_Order_Frequency__c))),
            Allow_Recurring_Order__c = FALSE
        )
     ),
     $Setup.LVGO_Automation_Switch__c.Validations__c
)</errorConditionFormula>
    <errorMessage>When Allow Recurring Order is checked, Recurring Frequency value is required.</errorMessage>
</ValidationRule>